updated new relic

--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -3,9 +3,9 @@
 # Ruby, Java, .NET, PHP, and Python applications with deep visibility and low overhead.
 # For more information, visit www.newrelic.com.
 #
-# Generated May 13, 2014
+# Generated May 19, 2014
 #
-# This configuration file is custom generated for app24959833@heroku.com
+# This configuration file is custom generated for Oli
 
 
 # Here are the settings that are common to all environments
@@ -15,7 +15,7 @@ common: &default_settings
   # You must specify the license key associated with your New Relic
   # account.  This key binds your Agent's data to your account in the
   # New Relic service.
-  license_key: 'b77f8566290e53014afcd83868245ae91e4d78ee'
+  license_key: '28dcaa2310cbb04f914266d0e3aefba10b304aa5'
 
   # Agent Enabled (Ruby/Rails Only)
   # Use this setting to force the agent to run or not run.
