implemented sandbox paypal integration

--- a/config/paypal.yml
+++ b/config/paypal.yml
@@ -18,8 +18,15 @@ development: &default
 test:
   <<: *default
 production:
-  mode: live
-  username: USERNAME
-  password: PASSWORD
-  signature: SIGNATURE
-  app_id: APP_ID
+  # mode: live
+  # username: USERNAME
+  # password: PASSWORD
+  # signature: SIGNATURE
+  # app_id: APP_ID
+  username: jb-us-seller_api1.paypal.com
+  password: WX4WTU3S8MY44S7F
+  signature: AFcWxV21C7fd0v3bYYYRCpSSRl31A7yDhhsPUU2XhtMoZXsWHFxu-RWy
+  app_id: APP-80W284485P519543T
+  http_timeout: 30
+  mode: sandbox
+  sandbox_email_address: Platform.sdk.seller@gmail.com
