--- a/config/paypal.yml
+++ b/config/paypal.yml
@@ -6,6 +6,13 @@ development: &default
   http_timeout: 30
   mode: sandbox
   sandbox_email_address: Platform.sdk.seller@gmail.com
+  # username: jb-us-seller_api1.paypal.com
+  # password: WX4WTU3S8MY44S7F
+  # signature: AFcWxV21C7fd0v3bYYYRCpSSRl31A7yDhhsPUU2XhtMoZXsWHFxu-RWy
+  # app_id: APP-80W284485P519543T
+  # http_timeout: 30
+  # mode: sandbox
+  # sandbox_email_address: Platform.sdk.seller@gmail.com
   # # with certificate
   # cert_path: "config/cert_key.pem"
   # # with token authentication
