--- a/config/paypal.yml
+++ b/config/paypal.yml
@@ -9,7 +9,7 @@ test:
   <<: *sandbox
 
 production: &production
-  username: ENV["PAYPAL_USERNAME"],
-  password: ENV["PAYPAL_PASSWORD"],
-  signature: ENV["PAYPAL_SIGNATURE"],
-  sandbox: ENV['PAYPAL_SANDBOX']
+  username: <%= ENV["PAYPAL_USERNAME"] %>
+  password: <%= ENV["PAYPAL_PASSWORD"] %>
+  signature: <%= ENV["PAYPAL_SIGNATURE"] %>
+  sandbox: <%= ENV["PAYPAL_SANDBOX"] %>
