changed paypal production settings

--- a/config/paypal.yml
+++ b/config/paypal.yml
@@ -9,7 +9,11 @@ test:
   <<: *sandbox
 
 production: &production
-  username: <%= ENV["PAYPAL_USERNAME"] %>
-  password: <%= ENV["PAYPAL_PASSWORD"] %>
-  signature: <%= ENV["PAYPAL_SIGNATURE"] %>
-  sandbox: <%= ENV["PAYPAL_SANDBOX"] %>
+  # username: <%= ENV["PAYPAL_USERNAME"] %>
+  # password: <%= ENV["PAYPAL_PASSWORD"] %>
+  # signature: <%= ENV["PAYPAL_SIGNATURE"] %>
+  # sandbox: <%= ENV["PAYPAL_SANDBOX"] %>
+  username: ahalya-facilitator_api1.ahalyakumaran.com
+  password: QPAP5LMUFZ56J9MS
+  signature: AFcWxV21C7fd0v3bYYYRCpSSRl31Azg87K2o0wUFX5ukAgs7GmSG8cqh
+  sandbox: true
